# SCAR

./: !Update.ps1  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
BehaviorDataInjector/: SCAR_BDI.json
Nemesis_Engine/mod/scar/: info.ini
Nemesis_Engine/mod/scar/0_master/: #0106.txt  #0108.txt
Nemesis_Engine/mod/scar/1hm_behavior/: #0085.txt  #0087.txt  #0234.txt  #0236.txt  #0425.txt  #0430.txt  #0436.txt  #0437.txt  #2521.txt  #4874.txt  #scar$0.txt  #scar$1.txt  #scar$10.txt  #scar$11.txt  #scar$2.txt  #scar$3.txt  #scar$4.txt  #scar$5.txt  #scar$6.txt  #scar$7.txt  #scar$8.txt  #scar$9.txt
Nemesis_Engine/mod/scar/blockbehavior/: #0076.txt  #0078.txt  #0200.txt  #0203.txt  #0205.txt  #0294.txt  #0329.txt  #0335.txt  #0343.txt  #0349.txt  #0357.txt  #scar$0.txt  #scar$1.txt  #scar$10.txt  #scar$11.txt  #scar$2.txt  #scar$3.txt  #scar$4.txt  #scar$5.txt  #scar$6.txt  #scar$7.txt  #scar$8.txt  #scar$9.txt
Nemesis_Engine/mod/scar/defaultfemale/: #0029.txt
Nemesis_Engine/mod/scar/defaultmale/: #0029.txt  #0061.txt
docs/CN/: Moveset适配教程.md
docs/EN/: Apply Randomization For SCAR.md  Developers Manual For SCAR 2.0+.md  How To Patch Moveset For SCAR.md
src/: DataHandler.cpp  DataHandler.h  Function.cpp  Function.h  Hook.h  Hook_AttackCombo.cpp  Hook_AttackCombo.h  Hook_AttackReset.cpp  Hook_AttackReset.h  Hook_AttackStart.cpp  Hook_AttackStart.h  Hook_AttackVariants.cpp  Hook_AttackVariants.h  Hook_CombatRadius.h  Hook_MainUpdate.cpp  Hook_MainUpdate.h  LoadGame.cpp  LoadGame.h  PCH.h  SCARActionData.cpp  SCARActionData.h  TESActionData.h  main.cpp
src/DebugAPI/: DebugAPI.cpp  DebugAPI.h  FocusObject.cpp  FocusObject.h  ObjectBound.cpp  ObjectBound.h  ObjectOverride.h  Util.cpp  Util.h
src/OpenAnimationReplacer/API/: OpenAnimationReplacerAPI-Animations.cpp
src/PrecisionAPI/: PrecisionAPI.h
